--- a/src/webparts/page5/components/Page5.module.scss
+++ b/src/webparts/page5/components/Page5.module.scss
@@ -1,34 +1,234 @@
-@import '~@fluentui/react/dist/sass/References.scss';
-
-.page5 {
-  overflow: hidden;
-  padding: 1em;
-  color: "[theme:bodyText, default: #323130]";
-  color: var(--bodyText);
-  &.teams {
-    font-family: $ms-font-family-fallbacks;
-  }
-}
-
-.welcome {
-  text-align: center;
-}
-
-.welcomeImage {
+.container {
+  height: 25vh;
   width: 100%;
-  max-width: 420px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
-.links {
-  a {
-    text-decoration: none;
-    color: "[theme:link, default:#03787c]";
-    color: var(--link); // note: CSS Custom Properties support is limited to modern browsers only
+.pageContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-    &:hover {
-      text-decoration: underline;
-      color: "[theme:linkHovered, default: #014446]";
-      color: var(--linkHovered); // note: CSS Custom Properties support is limited to modern browsers only
-    }
+
+
+.modalImage {
+  max-width: 100%;
+  max-height: 80vh;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  margin: 0 auto 20px;
+}
+
+.backgroundImage {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+// Page5.module.scss
+
+// Page5.module.scss
+
+.container1 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.card {
+  width: 33%;
+  height: 45vh;
+  background-color: #bae0f7; // Color de fondo de las tarjetas
+  color: #004675;
+  text-align: center;
+  padding: 10px;
+  margin: 5px;
+  cursor: pointer;
+
+  p {
+    font-size: 1.8rem;
+    font-weight: 600;
   }
+
+  &:hover {
+    background-color: #2980b9;
+    color: #fff; // Color de fondo al pasar el ratón
+  }
+}
+/* Modal Styles */
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modalContent {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.modalImage {
+  max-width: 100%;
+  max-height: 80vh;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  margin: 0 auto 20px;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: auto; /* Mueve el contenedor de los botones hacia abajo */
+}
+
+button {
+  background: #0078d4;
+  color: #fff;
+  padding: 10px 20px;
+  margin: 0 5px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+
+  &:hover {
+    background: #005a9e;
+  }
+}
+
+.closeButton {
+  color:black;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 22px;
+  cursor: pointer;
+
+  &:hover {
+    color: white;
+  }
+}
+.section2 {
+  width: 100%;
+  height: 90vh;
+
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none; /* Para quitar el borde predeterminado del iframe */
+  }
+}
+.section3{
+  margin-top: 2%;
+  width: 100%;
+  height: 80vh;
+  img{
+    width: 100%;
+    height: 100%;
+  }
+}
+
+
+
+/* Añade estos estilos a tu archivo Page5.module.scss */
+
+.slider {
+  position: relative;
+  overflow: hidden;
+}
+
+.slides {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.slide {
+  flex: 0 0 100%;
+  position: relative;
+  width: 100%;
+  height: auto;
+
+  img {
+    width: 100%;
+    height: 80vh;
+    object-fit: 100% 100%;
+  }
+}
+
+.navButton {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  color: #000000;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+.navButton:hover {
+  background-color: #0078d4;
+}
+
+.navButton:nth-child(1) {
+  left: 0;
+}
+
+.navButton:nth-child(2) {
+  right: 0;
+}
+
+/* Page5.module.scss */
+
+.containerLink {
+  text-decoration: none; /* Quitar subrayado del enlace */
+  width: 100%;
+}
+
+.container4 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.textContainer {
+  background-color: #bae0f7; /* Fondo blanco para el contenedor de texto */
+  color: #002b47;
+  font-weight: 600;
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.imageContainer {
+  width: 100%;
+  background-color: #ffffff; /* Fondo blanco para el contenedor de imagen */
+  overflow: hidden; /* Asegura que la imagen no se desborde del contenedor */
+}
+
+.image {
+  width: 100%;
+  max-height: 85vh;
+  object-fit: 100% 100%; /* Ajusta el tamaño de la imagen sin distorsión */
 }
