--- a/src/webparts/sst/components/Sst.module.scss
+++ b/src/webparts/sst/components/Sst.module.scss
@@ -1,6 +1,8 @@
 @import '~@fluentui/react/dist/sass/References.scss';
 
-.onboarding {
+.sst {
+  overflow: hidden;
+  padding: 1em;
   color: "[theme:bodyText, default: #323130]";
   color: var(--bodyText);
   &.teams {
