--- a/src/webparts/aplicaciones/components/Aplicaciones.module.scss
+++ b/src/webparts/aplicaciones/components/Aplicaciones.module.scss
@@ -1,4 +1,5 @@
 @import '~@fluentui/react/dist/sass/References.scss';
+@import '../../../../styles/fonts';
 
 .aplicaciones {
   color: "[theme:bodyText, default: #323130]";
