--- a/src/webparts/page1/components/Page1.module.scss
+++ b/src/webparts/page1/components/Page1.module.scss
@@ -1,4 +1,10 @@
 /* Page1.module.scss */
+@import '../../../../styles/fonts';
+
+*{
+  font-family: "Avenir Next";
+}
+
 
 .page1 {
   padding: 20px;
