--- a/src/webparts/page8/components/Page8.module.scss
+++ b/src/webparts/page8/components/Page8.module.scss
@@ -1,6 +1,11 @@
 /* Estilos para el modal */
 
 /* En Page8.module.scss */
+@import '../../../../styles/fonts';
+
+*{
+  font-family: "Avenir Next";
+}
 
 .modalOverlay {
   position: fixed;
