--- a/src/webparts/page7/components/Page7.module.scss
+++ b/src/webparts/page7/components/Page7.module.scss
@@ -384,3 +384,57 @@
     transform: scale(1.1);
   }
 }
+.modalRow {
+  display: flex;
+  width: 100%;
+  height: 50%;
+}
+
+.modalColumn {
+  flex: 1;
+}
+
+.imageContainer {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.modalImage {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
+.blankContainer {
+  height: 35%;
+  width: 100%;
+  background-color: white;
+}
+
+.flexibilityText {
+  z-index: 2;
+  width: 100%;
+  position:absolute;
+  top: 80%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.38);
+  height: 20%;
+  text-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px, rgba(0, 0, 0, 0.3) -2px 4px 2px;
+  p{
+    color: white;
+    font-weight: bold;
+    font-size: 1rem; /* Ajusta el tamaño de la letra según sea necesario */
+  }
+}
+.curva{
+  display: flex;
+  justify-content: center;
+  top: 15%;
+  position: relative;
+}
