--- a/src/webparts/page2/components/Page2.module.scss
+++ b/src/webparts/page2/components/Page2.module.scss
@@ -6,8 +6,9 @@
 
 .container {
   height: 115vh;
-  width: 100%;
-  margin: 0;
+  width: 98%;
+  margin: 0 auto;
+  margin-bottom: 1vh;
   display: flex;
   align-items: center;
   justify-content: center;
