--- a/src/webparts/page3/components/Page3.module.scss
+++ b/src/webparts/page3/components/Page3.module.scss
@@ -5,8 +5,9 @@
 }
 
 .container {
-  width: 100%;
-  margin: 0;
+  width: 98%;
+  margin: 0 auto;
+  margin-bottom: 1vh;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -21,6 +22,8 @@
   background: rgba(128, 128, 128, 0.4);
   transition: opacity 0.3s ease; /* Agregamos una transición para la opacidad del fondo */
 }
+
+
 
 .partitions {
   display: grid;
