fix:estilos de poput arreglados

--- a/src/webparts/calendar/components/Calendar.module.scss
+++ b/src/webparts/calendar/components/Calendar.module.scss
@@ -142,3 +142,14 @@
   align-items: center;
   padding:8px;
 }
+
+
+// estilosd el  poput
+.spanCalendar{
+  width: 3rem;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+
+}
