FIX: Ancho calendario

--- a/src/webparts/calendar/components/Calendar.module.scss
+++ b/src/webparts/calendar/components/Calendar.module.scss
@@ -1,6 +1,6 @@
 @import '~@fluentui/react/dist/sass/References.scss';
 
-#calendar_container{
+#calendarContainer{
   width: 98%;
   margin: 0 auto;
   margin-bottom: 1vh 
