--- a/src/webparts/calendar/components/Calendar.module.scss
+++ b/src/webparts/calendar/components/Calendar.module.scss
@@ -101,10 +101,16 @@
   cursor: pointer;
 }
 
-.controlMonth,.controlHoy:hover {
-  background-color: lightgray; 
-  transition: background-color 0.3s ease;
+.controlMonth:hover{
+  background-color: lightgray;
+
+
 }
+.controlHoy:hover {
+  background-color: lightgray; 
+
+}
+
 .calendarContainer{
   width: 100%;
   display: flex;
