--- a/src/webparts/page8/components/Page8.module.scss
+++ b/src/webparts/page8/components/Page8.module.scss
@@ -1,9 +1,9 @@
 /* Estilos para el modal */
 
 /* En Page8.module.scss */
-@import '../../../../styles/fonts';
+@import "../../../../styles/fonts";
 
-*{
+* {
   font-family: "Avenir Next";
 }
 
@@ -73,7 +73,6 @@
   cursor: pointer;
 }
 
-
 .slideButtonLeft {
   left: 10px;
 }
@@ -134,7 +133,7 @@
 .flexibilityText {
   z-index: 2;
   width: 100%;
-  position:relative;
+  position: relative;
   top: 15%;
   left: 0;
   right: 0;
@@ -145,13 +144,13 @@
   background: rgba(255, 255, 255, 0.38);
   height: 40%;
   text-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px, rgba(0, 0, 0, 0.3) -2px 4px 2px;
-  p{
+  p {
     color: white;
     font-weight: bold;
     font-size: 1.2rem; /* Ajusta el tamaño de la letra según sea necesario */
   }
 }
-.curva{
+.curva {
   display: flex;
   justify-content: center;
   top: 15%;
@@ -177,11 +176,71 @@
   }
 
   &.activeTab {
-    background-color: rgb(50, 158, 144);;
+    background-color: rgb(50, 158, 144);
     color: white;
 
     &:hover {
       background-color: rgb(25, 121, 109);
     }
   }
+}
+
+// estilos del power point
+
+.contentPowerGaleria {
+  width: 100%;
+  height: auto;
+}
+.contentPower {
+  width: 100%;
+  height: auto;
+}
+.titlePower {
+  width: 100%;
+  height: 3rem;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.powerPoint {
+  width: 100%;
+  height: 26rem;
+}
+// estilosd e galeria actividades
+
+.hr {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  border: 0;
+  height: 4px;
+  background-image: linear-gradient(to right, blue, purple);
+}
+.titleActividades{
+margin-top: 2rem;
+}
+.galeriaActividades {
+  width: 100%;
+  height: 25rem;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  background-color:#F0F0F0 ;
+}
+.actividadesImage {
+  width: 70%;
+  height: 100%;
+  height: 100%;
+  object-fit: contain;
+  margin: auto;
+  
+}
+.lengthImages{
+  font-weight: bold;
+  width: 100%;
+  display: flex;
+  align-items: end;
+  justify-content: end;
+  margin-top: 1rem;
 }
