--- a/src/webparts/page8/components/Page8.module.scss
+++ b/src/webparts/page8/components/Page8.module.scss
@@ -207,8 +207,11 @@
   width: 100%;
   height: 26rem;
 }
-// estilosd e galeria actividades
 
+
+
+
+// estilosd e galeria de actividades
 .hr {
   margin-top: 2rem;
   margin-bottom: 2rem;
