--- a/src/webparts/calendar/components/Calendario.css
+++ b/src/webparts/calendar/components/Calendario.css
@@ -534,6 +534,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    display: none !important;
   }
   
   .toastui-calendar-popup-container {
