--- a/src/webparts/page8/components/Page8.module.scss
+++ b/src/webparts/page8/components/Page8.module.scss
@@ -247,3 +247,91 @@ margin-top: 2rem;
   justify-content: end;
   margin-top: 1rem;
 }
+
+
+// estilos de barra de navegación
+.contentNavegacionObjectivos{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.barraNavegación{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1rem;
+}
+
+.navegationButton{
+  width: 12rem;
+  height: 3rem;
+  background-color:#add8e6 ;
+  box-shadow: #add8e6 0px 0px 10px;
+  border-radius: 25px;
+  color: white;
+  padding:10px ;
+  font-weight: 600;
+  border: 0;
+  cursor: pointer;
+}
+
+.navegationButton:nth-child(1){
+  background-color:  #6A5ACD;
+  box-shadow:#6A5ACD 0px 0px 10px;
+}
+.navegationButton:nth-child(2){
+  background-color: #9ACD32;
+  box-shadow:#9ACD32 0px 0px 10px;
+}
+
+.navegationButton:nth-child(3){
+  background-color: #FF6347;
+  box-shadow:#FF6347 0px 0px 10px;
+}
+
+.objectivos{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+}
+
+// estilos del modal de pildoras
+.contentModalPildoras{
+  position:relative;
+  background-color: #6A5ACD;
+  height: 80%;
+  width: 80%;
+  overflow: hidden;
+  margin: auto;
+}
+.titlePildoras{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.subtitlePildoras{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.contentPildoras{
+  width: 100%;
+  height: 90%;
+  background-color: yellow;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr; 
+  gap: 10px; 
+}
+
