--- a/src/webparts/banner/components/Banner.module.scss
+++ b/src/webparts/banner/components/Banner.module.scss
@@ -5,16 +5,29 @@
   width: 100%;
   background-color: #efefef;
   text-align: left;
+  padding-top: 0.3rem;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+  padding-bottom: 4rem;
 }
 
 .bannerImage {
-  width: 100%;
-  height: auto;
+  width: 95%;
+  display: block;
+  object-fit: contain;
+  object-position: 50% 50%;
+}
+.banner:nth-child(1){
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
 }
 
 .lista {
   color: black;
   text-decoration: none;
+  font-size: 14px;
 }
 
 .lista:hover {
@@ -26,9 +39,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 100%; /* Ajustado para ocupar el ancho completo */
+  width: 90%; 
 }
-
 .socialIcons a {
   text-decoration: none; /* Elimina la decoración de subrayado */
   color: inherit; /* Hereda el color del texto del elemento padre */
