--- a/src/webparts/page4Origin/components/Page4Origin.module.scss
+++ b/src/webparts/page4Origin/components/Page4Origin.module.scss
@@ -30,52 +30,50 @@
 
 .card {
   position: relative;
-  width: 50%;
-  padding: 20px;
-  height: 20vh;
-  background-color: white;
-  color: rgb(173, 104, 13);
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 5rem;
+  color:rgb(173, 104, 13);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   overflow: hidden;
-
-  &::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(255, 255, 255, 0), white);
-    top: 0; /* Cambiado de bottom a top */
-    left: 0;
-    transform-origin: top; /* Cambiado de bottom a top */
-    transform: scaleY(1);
-    transition: transform 0.5s, background-color 0.5s;
-  }
-
-  &:hover {
-    background-color: rgb(173, 104, 13);
-    color: white;
-    height: auto;
-
-    &::before {
-      transform: scaleY(0);
-    }
-  }
-
-  h3 {
-    margin-bottom: 10px;
-  }
-
-  p {
-    display: none;
-    text-align: justify;
-    font-size: 10px;
-  }
-
-  &:hover p {
-    display: block;
-  }
+  cursor: pointer;
 }
 
+.card p,
+.card h3 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: medium;
+  position: absolute;
+}
+
+.card p {
+  z-index: -1;
+  transform: translateY(300px);
+}
+
+.card h3 {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  position: absolute;
+}
+
+.card:hover p {
+  background-color: rgb(173, 104, 13);
+  color: white;
+  transform: translateY(0);
+  transition: all 0.5s ease;
+  z-index: 1;
+}
 
 /* Agrega estos estilos al final de tu archivo Page4Origin.module.scss */
 
@@ -83,9 +81,10 @@
   position: relative;
   overflow: hidden;
   display: flex;
-  height: 75vh; /* Altura deseada del slider */
+  height: 100%; /* Altura deseada del slider */
   width: 100%;
 }
+
 
 .slides2 {
   display: flex;
@@ -239,18 +238,32 @@
 }
 .imguni2 {
   width: 55%; /* Ajusta el ancho de las imágenes del slider según tus necesidades */
-  height: 100%;
+  height: 70%;
   object-fit: 100% 100%;
   cursor: pointer;
   transition: transform 0.5s ease;
   z-index: 2;
+  background-size: contain;
 }
 
+.imageSection1{
+  width: 100%;
+  height: auto;
+
+}
 
 .imageSection {
-  height: auto;
+  margin-top: 10px;
+  height: 20rem;
   margin-bottom: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+  overflow: hidden;
+
 }
+
 
 .container {
   display: flex;
@@ -293,6 +306,7 @@
     display: flex;
     justify-content: space-between;
     overflow: hidden; /* Para que las imágenes no se desborden */
+    background-color: #ad680d;
   }
 }
 
@@ -306,6 +320,7 @@
     display: flex;
     transition: transform 0.5s ease;
     width: 100%;
+    height:100%;
     z-index: 2;
   }
 
@@ -332,6 +347,7 @@
     width: 100%; /* Cada imagen ocupa el 100 / 12 % del contenedor */
     float: left;
 
+
     img {
       width: 100%;
       height: 55vh;
@@ -351,3 +367,6 @@
     padding: 15px;
   }
 }
+
+
+
