--- a/src/webparts/page9/components/Page9.module.scss
+++ b/src/webparts/page9/components/Page9.module.scss
@@ -22,60 +22,69 @@
 
 .cardsSection {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   height: auto;
-  margin-top: 1%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+
 }
 
 .card {
   position: relative;
   width: 100%;
-  height: 2.5rem;
-  padding: 10px;
-  height: auto;
-  // background-image: linear-gradient(to bottom, rgb(173, 104, 13), white 270%);
-  // background-image: linear-gradient(to bottom, #a7c7e7, #c0a3d8);
-  background-image: linear-gradient(to right, #5d8ccf, #8e5aad);
-
-
- 
-  color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 5rem;
+  color:rgb(173, 104, 13);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   overflow: hidden;
   cursor: pointer;
-  transition: all 0.5s ease;
-  margin-bottom: 5px;
-
-  // &:hover {
-  //   background-color: rgb(173, 104, 13);
-  //   color: white;
-  // }
-
-
-
-  p {
-    width: 80%;
-    display:block;
-    text-align: justify;
-    align-items: center;
-    font-size: large;
-    transform: translateY(-300px);
-    margin: auto;
-    position: absolute;
-  }
-
-  &:hover p {
-    transform: translateY(0);
-    position: relative;
-    transition: all 0.5s ease;
-  }
 }
+
+.card p,
+.card .titleObjectivos {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: medium;
+  position: absolute;
+}
+
+.card p {
+  z-index: -1;
+  transform: translateY(300px);
+}
+
+.card .titleObjectivos {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  position: absolute;
+}
+
+.card:hover p {
+  background-color: rgb(173, 104, 13);
+  color: white;
+  transform: translateY(0);
+  transition: all 0.5s ease;
+  z-index: 1;
+}
+
 
 .div3070{
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+
+
   .div30{
   width: 30%;
   }
@@ -140,6 +149,7 @@ ul > li > ul {
   justify-content: center;
   width: 100%;
 }
+
 .zoomableImage {
   width: 15vw;
   height: 18vh;
@@ -162,8 +172,5 @@ ul > li > ul {
   height: 100%;
   object-fit: 100% ;
 }
-.titleObjectivos{
-  margin-block-start: 0;
-  margin-block-end: 0;
-}
+
 
